# anyrepair

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  COMPLEX_DAMAGE_TESTS.md  Cargo.toml  Dockerfile  FOLDER_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  MODULIZATION_GUIDE.md  MODULIZATION_PROGRESS.md  MODULIZATION_SUMMARY.md  OPTIMIZATION.md  OPTIMIZATION_SUMMARY.txt  README.md  SIMPLIFICATION_SUMMARY.md  SPEC.md  STREAMING_FEATURE.md  TEST_SUMMARY.md  TODO.md  TROUBLESHOOTING.md  anyrepair.toml  plugin_config.toml
benches/: repair_benchmarks.rs
docs/: ARCHITECTURE.md  BUILD_OPTIMIZATION.md  CHANGELOG.md  COMPLEX_STREAMING_TESTS.md  DRY_KISS_IMPROVEMENTS.md  EXAMPLES_SUMMARY.md  FINAL_SUMMARY.md  INDEX.md  MCP_IMPLEMENTATION.md  MCP_SERVER.md  MCP_TEST_COVERAGE.md  MODULIZATION_COMPLETE.md  MODULIZATION_PLAN.md  PLUGIN_DEVELOPMENT.md  PUBLICATION_CHECKLIST.md  SIMPLIFICATION_PLAN.md  TEST_SUMMARY.md  enterprise_features.md  index.html
examples/: README.md  example_plugin.rs  mcp_multi_format.rs  mcp_protocol.md  mcp_repair_json.rs  mcp_server_usage.rs
examples/data/: README.md  complex_api_response.json  complex_config.json  mailform_response.json  malformed.md  malformed.toml  malformed.yaml  malformed_complex_api.json  malformed_extra_closing_brace.json  malformed_extra_closing_bracket.json  malformed_missing_closing_brace.json  malformed_missing_opening_bracket.json  malformed_unquoted_values.json  sample.csv
examples/data/csv/malformed/: malformed.csv
examples/data/diff/complex/: large_hunk_complex.diff  malformed_complex.diff  mixed_changes_complex.diff  multi_file_complex.diff  real_world_git.diff
examples/data/diff/malformed/: malformed.diff  malformed_inconsistent_spacing.diff  malformed_incorrect_prefixes.diff  malformed_malformed_hunk_range.diff  malformed_missing_file_headers.diff  malformed_missing_hunk_header.diff  malformed_missing_newline.diff
examples/data/diff/sample/: sample.diff
examples/data/ini/malformed/: malformed.ini
examples/data/ini/sample/: sample.ini
examples/data/json/complex/: complex_ecommerce.json  malformed_complex_ecommerce.json
examples/data/json/malformed/: malformed.json  malformed_missing_closing_bracket.json  malformed_missing_opening_brace.json  malformed_unquoted_keys.json
examples/data/json/sample/: sample.json
examples/data/markdown/sample/: sample.md
examples/data/toml/sample/: sample.toml
examples/data/xml/malformed/: malformed.xml
examples/data/xml/sample/: sample.xml
examples/data/yaml/sample/: sample.yaml
src/: advanced.rs  analytics.rs  audit_log.rs  batch_processor.rs  confidence_scorer.rs  config.rs  context_parser.rs  csv.rs  custom_rules.rs  diff.rs  enhanced_json.rs  env.rs  error.rs  format_detection.rs  ini.rs  json.rs  json_util.rs  key_value.rs  lib.rs  main.rs  markdown.rs  mcp_server.rs  parallel.rs  parallel_strategy.rs  plugin.rs  plugin_config.rs  plugin_integration.rs  properties.rs  repairer_base.rs  streaming.rs  toml.rs  traits.rs  validation_rules.rs  xml.rs  yaml.rs
src/cli/: batch_cmd.rs  completions_cmd.rs  mod.rs  plugins_cmd.rs  repair_cmd.rs  rules_cmd.rs  stream_cmd.rs  validate_cmd.rs
src/json/: mod.rs  strategies.rs  validator.rs
src/markdown/: mod.rs  strategies.rs  validator.rs
src/repairers/: csv.rs  ini.rs  json.rs  markdown.rs  mod.rs  toml.rs  xml.rs  yaml.rs
src/utils/: advanced.rs  context_parser.rs  enhanced_json.rs  mod.rs  parallel.rs
tests/: cli_tests.rs  complex_damage_tests.rs  complex_streaming_tests.rs  damage_scenarios.rs  diff_tests.rs  fuzz_tests.proptest-regressions  fuzz_tests.rs  golden_master_tests.rs  integration_tests.rs  properties_env_tests.rs  streaming_tests.rs  strict_validation_tests.rs
